Arrumar Dockerfile ou arrumar integração direta do front